fixup! fixup! m2 init